# salute_speech

./: .env.example  .flake8  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  requirementx.txt  setup.py
.github/workflows/: pylint.yml  python-package.yml
conf/: russian.pem
salute_speech/: __init__.py  exceptions.py  speech_recognition.py
salute_speech/commands/: __init__.py  cmd_download_result.py  cmd_get_task_status.py  cmd_recognize_audio.py  cmd_transcribe_audio.py  cmd_upload_audio.py  download_result.py  get_task_status.py  recognize_audio.py  transcribe_audio.py  upload_audio.py
salute_speech/utils/: audio.py  const.py  logging.py  package.py  result_writer.py  russian_certs.py  token.py
src/salute_speech/: __init__.py  exceptions.py  speech_recognition.py
src/salute_speech/commands/: __init__.py  cmd_download_result.py  cmd_get_task_status.py  cmd_recognize_audio.py  cmd_transcribe_audio.py  cmd_upload_audio.py
src/salute_speech/utils/: audio.py  logging.py  package.py  result_writer.py  russian_certs.py  token.py
tests/: test_async_flow.py  test_audio_validator.py  test_audio_validator_integration.py  test_cli_transcribe_audio.py  test_convert_to_whisper.py  test_file_upload.py  test_recognize_audio.py  test_result_writer.py  test_token_integration.py  test_token_manager.py  test_token_parsing_error.py  test_token_retireval.py
